tests/errors/footprint_required.nm
// Some comment
component Foo {
    prefix = "U";
}